objects/FLODocs__Environment_Compare_Difference_Wrapper__c.object
<CustomObject>
    <fields>
        <fullName>FLODocs__sourceObjectApiName__c</fullName>
        <label>sourceObjectApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectId__c</fullName>
        <label>sourceObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>sourceObjectIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectLastModifiedDate__c</fullName>
        <label>sourceObjectLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectLastUsedDate__c</fullName>
        <label>sourceObjectLastUsedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectName__c</fullName>
        <label>sourceObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceObjectType__c</fullName>
        <label>sourceObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__sourceXml__c</fullName>
        <label>sourceXml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectApiName__c</fullName>
        <label>targetObjectApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectId__c</fullName>
        <label>targetObjectId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectIsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>targetObjectIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectLastModifiedDate__c</fullName>
        <label>targetObjectLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectLastUsedDate__c</fullName>
        <label>targetObjectLastUsedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectName__c</fullName>
        <label>targetObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetObjectType__c</fullName>
        <label>targetObjectType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__targetXml__c</fullName>
        <label>targetXml</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Environment Compare Difference Wrapper</label>
    <nameField>
        <label>Environment Compare  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environment Compare Difference Wrapper</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>